# PersonalAssistant

./: .env.example  .gitignore  README.md  README_DATABASE.md  README_MCP_SERVERS.md  SETTINGS_GUIDE.md  TESTING.md  pyproject.toml  requirements.txt  run_sample_test.py  run_tests.py  start.bat  start.sh  start_mcp_servers.bat  start_mcp_servers.py  start_mcp_servers.sh  status_mcp_servers.bat  status_mcp_servers.py  status_mcp_servers.sh  stop_mcp_servers.bat  stop_mcp_servers.py  stop_mcp_servers.sh  test_email_validation.py  test_mcp_connection.py  test_mcp_servers.py  test_nested_placeholder.py  test_placeholder_resolver.py  test_questions.json  test_requests.json  validation_dataset_100.md
frontend/: index.html
frontend/static/: app.js  styles.css
mcp_servers/calculator_agent/: server.py
mcp_servers/calendar_agent/: server.py
mcp_servers/contact_agent/: server.py
mcp_servers/jira_agent/: server.py
mcp_servers/mail_agent/: server.py
mcp_servers/rpa_agent/: server.py
scripts/: migrate_db.py
src/: api_server.py  main.py
src/orchestration/: __init__.py  config.py  dispatcher.py  event_emitter.py  listener.py  llm_client.py  mcp_executor.py  orchestrator.py  placeholder_resolver.py  planner.py  settings_manager.py  tracker.py  types.py  validators.py
