[tool.poetry]
name = "personal-assistant-orchestration"
version = "1.0.0"
description = "Orchestration service with direct MCP integration (LangGraph-based)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "orchestration", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.0"
langchain-core = "^0.3.0"
langchain-anthropic = "^0.2.0"
anthropic = "^0.39.0"
mcp = "^1.1.0"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.7.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
